# bosiclaw

./: .gitignore  bundled-runtime.config.json  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/: bundled-runtime-plan.md
scripts/: prepare-bundled-deps.sh  prepare-bundled-runtime.mjs  verify-bundled-runtime.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/runtime/: README.md
src-tauri/src/: main.rs
src-tauri/src/commands/: config.rs  diagnostics.rs  installer.rs  process.rs  service.rs
src-tauri/src/models/: status.rs
src-tauri/src/utils/: bundled.rs  platform.rs  shell.rs
src/components/: SupportModal.tsx
src/components/AIConfig/: index.tsx
src/components/Dashboard/: SystemInfo.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Logs/: index.tsx
src/components/Setup/: index.tsx
src/lib/: logger.ts  tauri.ts
